@@ -25,12 +25,14 @@ import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
 
 import android.adservices.common.AdTechIdentifier;
 import android.adservices.common.CommonFixture;
 
+import com.android.adservices.common.SdkLevelSupportRule;
 import com.android.adservices.data.signals.DBProtectedSignal;
 import com.android.adservices.data.signals.ProtectedSignalsDao;
 import com.android.adservices.service.signals.evict.SignalEvictionController;
@@ -44,6 +46,7 @@ import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
@@ -80,6 +83,9 @@ public class UpdateProcessingOrchestratorTest {
 
     private UpdateProcessingOrchestrator mUpdateProcessingOrchestrator;
 
+    @Rule(order = 0)
+    public final SdkLevelSupportRule sdkLevel = SdkLevelSupportRule.forAtLeastT();
+
     @Before
     public void setup() {
         mUpdateProcessingOrchestrator =
@@ -97,7 +103,7 @@ public class UpdateProcessingOrchestratorTest {
                 ADTECH, PACKAGE, NOW, new JSONObject(), DEV_CONTEXT);
         verify(mProtectedSignalsDaoMock).getSignalsByBuyer(eq(ADTECH));
         verify(mProtectedSignalsDaoMock)
-                .insertAndDelete(Collections.emptyList(), Collections.emptyList());
+                .insertAndDelete(ADTECH, NOW, Collections.emptyList(), Collections.emptyList());
         verifyZeroInteractions(mUpdateProcessorSelectorMock);
         verify(mSignalEvictionControllerMock)
                 .evict(
@@ -136,7 +142,9 @@ public class UpdateProcessingOrchestratorTest {
                                 mUpdateProcessingOrchestrator.processUpdates(
                                         ADTECH, PACKAGE, NOW, commandToNumber, DEV_CONTEXT));
         assertEquals(exception, t.getCause());
+        verify(mProtectedSignalsDaoMock).getSignalsByBuyer(ADTECH);
         verifyZeroInteractions(mSignalEvictionControllerMock);
+        verifyNoMoreInteractions(mProtectedSignalsDaoMock);
     }
 
     @Test
@@ -156,8 +164,9 @@ public class UpdateProcessingOrchestratorTest {
 
         mUpdateProcessingOrchestrator.processUpdates(ADTECH, PACKAGE, NOW, json, DEV_CONTEXT);
 
-        List<DBProtectedSignal> expected = Arrays.asList(createSignal(KEY_1, VALUE));
-        verify(mProtectedSignalsDaoMock).insertAndDelete(eq(expected), eq(Collections.emptyList()));
+        List<DBProtectedSignal> expected = List.of(createSignal(KEY_1, VALUE));
+        verify(mProtectedSignalsDaoMock)
+                .insertAndDelete(ADTECH, NOW, expected, Collections.emptyList());
         verify(mUpdateProcessorSelectorMock).getUpdateProcessor(eq(TEST_PROCESSOR));
         verify(mSignalEvictionControllerMock)
                 .evict(
@@ -185,7 +194,8 @@ public class UpdateProcessingOrchestratorTest {
         mUpdateProcessingOrchestrator.processUpdates(ADTECH, PACKAGE, NOW, json, DEV_CONTEXT);
 
         List<DBProtectedSignal> expected = Arrays.asList(createSignal(KEY_1, VALUE));
-        verify(mProtectedSignalsDaoMock).insertAndDelete(eq(expected), eq(Collections.emptyList()));
+        verify(mProtectedSignalsDaoMock)
+                .insertAndDelete(ADTECH, NOW, expected, Collections.emptyList());
         verify(mUpdateProcessorSelectorMock).getUpdateProcessor(eq(TEST_PROCESSOR));
         verify(mSignalEvictionControllerMock)
                 .evict(
@@ -214,7 +224,7 @@ public class UpdateProcessingOrchestratorTest {
 
         verify(mProtectedSignalsDaoMock).getSignalsByBuyer(eq(ADTECH));
         verify(mProtectedSignalsDaoMock)
-                .insertAndDelete(eq(Collections.emptyList()), eq(Arrays.asList(toRemove)));
+                .insertAndDelete(ADTECH, NOW, Collections.emptyList(), Arrays.asList(toRemove));
         verify(mUpdateProcessorSelectorMock).getUpdateProcessor(eq(TEST_PROCESSOR));
         verify(mSignalEvictionControllerMock)
                 .evict(eq(ADTECH), eq(List.of(toKeep)), mUpdateOutputArgumentCaptor.capture());
@@ -250,7 +260,8 @@ public class UpdateProcessingOrchestratorTest {
         DBProtectedSignal expected1 = createSignal(KEY_1, VALUE);
         DBProtectedSignal expected2 = createSignal(KEY_2, VALUE);
         verify(mProtectedSignalsDaoMock)
-                .insertAndDelete(mInsertCaptor.capture(), eq(Collections.emptyList()));
+                .insertAndDelete(
+                        eq(ADTECH), eq(NOW), mInsertCaptor.capture(), eq(Collections.emptyList()));
         assertThat(mInsertCaptor.getValue())
                 .containsExactlyElementsIn(Arrays.asList(expected1, expected2));
         verify(mUpdateProcessorSelectorMock).getUpdateProcessor(eq(TEST_PROCESSOR + 1));
@@ -317,7 +328,7 @@ public class UpdateProcessingOrchestratorTest {
         verify(mProtectedSignalsDaoMock).getSignalsByBuyer(eq(ADTECH));
         verify(mProtectedSignalsDaoMock)
                 .insertAndDelete(
-                        eq(Collections.emptyList()), eq(Arrays.asList(toRemove1, toRemove2)));
+                        ADTECH, NOW, Collections.emptyList(), Arrays.asList(toRemove1, toRemove2));
         verify(mUpdateProcessorSelectorMock).getUpdateProcessor(eq(TEST_PROCESSOR));
         verify(mSignalEvictionControllerMock)
                 .evict(eq(ADTECH), eq(List.of()), mUpdateOutputArgumentCaptor.capture());
@@ -441,7 +452,7 @@ public class UpdateProcessingOrchestratorTest {
         mUpdateProcessingOrchestrator.processUpdates(ADTECH, PACKAGE, NOW, json, DEV_CONTEXT);
 
         List<DBProtectedSignal> expected = Arrays.asList(createSignal(KEY_1, VALUE));
-        verify(mProtectedSignalsDaoMock).insertAndDelete(eq(expected), eq(expected));
+        verify(mProtectedSignalsDaoMock).insertAndDelete(ADTECH, NOW, expected, expected);
         verify(mUpdateProcessorSelectorMock).getUpdateProcessor(eq(TEST_PROCESSOR));
     }
 }
